--- a/euromon-mon-soleil.yaml
+++ b/euromon-mon-soleil.yaml
@@ -21,8 +21,8 @@ ota:
   platform: esphome
 
 wifi:
-  ssid: x
-  password: x
+  ssid: !secret wifi_ssid
+  password: !secret wifi_password
 
 captive_portal:
 
